[package]
name = "api-rust-actix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
ulid = "0.4.1"
rusqlite = { version = "0.25.1", features = ["bundled"] }